--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,9 @@
   </contributors>
 
   <scm>
-    <url>scm:svn:https://mybatis.googlecode.com/svn/trunk</url>
-    <connection>scm:svn:https://mybatis.googlecode.com/svn/trunk</connection>
-    <developerConnection>scm:svn:https://mybatis.googlecode.com/svn/trunk</developerConnection>
+    <url>scm:svn:https://github.com/gargii/mybatis-3</url>
+    <connection>scm:svn:https://github.com/gargii/mybatis-3</connection>
+    <developerConnection>scm:svn:https://github.com/gargii/mybatis-3</developerConnection>
   </scm>
   <distributionManagement>
     <!-- Cannot define in parent ATM, see COMMONSSITE-26 -->
